# LiDAR_Human_Tracker_ROS2

./: CMakeLists.txt  README.md  package.xml
config/: detector_params.yaml  group_cluster_params.yaml  tracker_params.yaml
docs/: ROBUST_DETECTION.md  STANDING_DETECTION.md
examples/: group_array_example.cpp
include/human_tracker_ros2/clustering/: group_cluster.hpp
include/human_tracker_ros2/detector/: detector_base.hpp  lidar_detector.hpp
include/human_tracker_ros2/tracker/: kalman_filter.hpp  multi_target_tracker.hpp
launch/: human_tracker.launch.py
msg/: DetectedHuman.msg  GroupState.msg  GroupStateArray.msg  GroupStates.msg  TrackedHuman.msg  TrackedHumans.msg
scripts/: test_group_array.py  verify_closest_groups.py
src/clustering/: group_cluster.cpp
src/detector/: lidar_detector.cpp
src/nodes/: detector_node.cpp  group_cluster_node.cpp  tracker_node.cpp
src/test/: test_colored_pointcloud.cpp
src/tracker/: kalman_filter.cpp  multi_target_tracker.cpp
